adding email modeule

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "imap": "^0.8.16",
     "rx": "^4.0.6",
     "shelljs": "^0.5.3"
   }
